@@ -8,6 +8,7 @@ FEATURES
 THANKS
 sendpage.cf
 email2page.conf
+snpp.conf
 docs/rfc1861.txt
 docs/README
 docs/PagingCentrals.txt
