@@ -20,6 +20,8 @@ $Id$
 	  transmitting a certain number of blocks
 	- added email debugging to PagingCentral.pm
 	- whoops: fixed total lack of "snpp-addr" working
+	- fixed bug in SNPPServer.pm during unexpected loss of socket
+	- implemented "/etc/snpp.conf" file for snpp defaults
 
 0.9.8: (30Jan2001)
 	- further updates to Device::SerialPort and associated documentation
